--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,6 +6,7 @@
   $third-bg-color: #2f303a;
   $fourth-bg-color: #c4c4c4;
   $accent-color: #2196f3;
+  $second-accent-color: #188ce8;
   $border-color: #ececec;
   $border-second-color: #eeeeee;
   $primary-white-color: #ffffff;
